--- a/assets/css/southfins.css
+++ b/assets/css/southfins.css
@@ -14,3 +14,10 @@ html, body {
   background-repeat: no-repeat;
   background-size: cover !important;
 }
+
+.footer {
+    width: 100%;
+    background-repeat:no-repeat !important;
+    background-position: bottom !important;
+
+}
